# gild

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  README.md
.github/workflows/: ci.yml
assets/: DEMO_INSTRUCTIONS.md  demo.tape
src/: app.rs  bus_factor.rs  cache.rs  churn.rs  coupling.rs  db.rs  export.rs  fmt.rs  gc.rs  git.rs  identity.rs  identity_map.rs  log.rs  mailmap.rs  main.rs  ownership.rs  questionnaire.rs  remote.rs  storage.rs  ui.rs  util.rs
src/ui/: loading.rs  mod.rs  theme.rs  widgets.rs
src/ui/views/: detail.rs  files.rs  mod.rs  table.rs
