[package]
name = "gild"
version = "0.1.0"
edition = "2021"
description = "Gild — interactive git contribution analyzer with fair impact scoring"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
git2 = "0.19"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
toml = "0.8"
