[package]
name = "gild"
version = "0.2.1"
edition = "2021"
rust-version = "1.70"
description = "Gild — interactive git contribution analyzer with fair impact scoring"
license = "MIT"
repository = "https://github.com/corbinjurgens/gild"
homepage = "https://github.com/corbinjurgens/gild"
readme = "README.md"
authors = ["Corbin Jurgens <corbinjurgens@gmail.com>"]
keywords = ["git", "analytics", "tui", "contributions", "blame"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
gix = { version = "0.82", features = ["blame", "parallel", "blocking-network-client", "blocking-http-transport-curl"] }
rayon = "1"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
toml = "0.8"
unicode-width = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
